force-app/main/default/objects/SFDC_Enrollment__c/fields/Transfer_Description__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Description__c</fullName>
    <label>Transfer Reason</label>
    <type>TextArea</type>
</CustomField>