force-app/main/default/objects/SFDC_Enrollment__c/fields/Transfer_Reason_Category__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Reason_Category__c</fullName>
    <label>Transfer Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>