force-app/main/default/objects/SFDC_Enrollment__c/fields/Transfer_To_Class__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Enrollments (Transfer To Class)</relationshipLabel>
    <relationshipName>Transfer_To_Class</relationshipName>
    <type>Lookup</type>
</CustomField>