force-app/main/default/objects/SFDC_Enrollment__c/fields/Transferred_From_Class__c.field-meta.xml
<CustomField>
    <fullName>Transferred_From_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred From Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Enrollments (Transferred From Class)</relationshipLabel>
    <relationshipName>Transferred_From_Class</relationshipName>
    <type>Lookup</type>
</CustomField>