force-app/main/default/objects/SFDC_Enrollment__c/fields/Transferred_On__c.field-meta.xml
<CustomField>
    <fullName>Transferred_On__c</fullName>
    <label>Transferred On</label>
    <type>Date</type>
</CustomField>