force-app/main/default/objects/SFDC_Enrollment__c/fields/Unique_Count__c.field-meta.xml
<CustomField>
    <fullName>Unique_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>