force-app/main/default/objects/SFDC_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Class_Result__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Enrollment_Severity__c</columns>
    <columns>Consumer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>