force-app/main/default/objects/SFDC_Enrollment__c/listViews/Enrollments_for_Test_Class.listView-meta.xml
<ListView>
    <fullName>Enrollments_for_Test_Class</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Hand_Washing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>Test Class</value>
    </filters>
    <label>Enrollments for Test Class</label>
</ListView>